--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,9 +28,12 @@ img{
     height: 100%;
     position: absolute;
 }
+.frente{
+    background-size: cover;
+}
 
 .atras{
-    background-image: url(/Imagens/barbabranca.jpg);
+    background-image: url(/Imagens/back.jpg);
     background-size: cover;
     background-position: center;
     backface-visibility: hidden;
